# Spatx_Docker

./: README.md  docker-compose.yml  prepare.ps1
backend/: Dockerfile  (+4 more)
backend/src/spatx_core/: .gitignore  DFD.md  README.md  __version__.py  main.py  pyproject.toml  pytest.ini
backend/src/spatx_core/saved_models/cit_to_gene/: test_model.py  working_model.py
backend/src/spatx_core/spatx_core/data/: __init__.py  data.py  data_point.py
backend/src/spatx_core/spatx_core/data_adapters/: __init__.py  base_data_adapter.py  breast_csv.py
backend/src/spatx_core/spatx_core/datasets/: __init__.py
backend/src/spatx_core/spatx_core/datasets/cit_to_gene/: __init__.py  dataset.py
backend/src/spatx_core/spatx_core/models/cit_to_gene/: CiTGene.py  CiT_Net_T.py  DDConv.py  __init__.py  loss.py
backend/src/spatx_core/spatx_core/predictors/: __init__.py
backend/src/spatx_core/spatx_core/predictors/cit_to_gene/: simple_predictor.py
backend/src/spatx_core/spatx_core/saved_models/cit_to_gene/: dummy123.py
backend/src/spatx_core/spatx_core/trainers/: __init__.py
backend/src/spatx_core/spatx_core/trainers/cit_to_gene/: simple_trainer.py
backend/src/spatx_core/tests/: conftest.py
backend/src/spatx_core/tests/integration/prediction_integrated/: __init__.py
backend/src/spatx_core/tests/integration/training_integrated/: __init__.py
backend/src/spatx_core/tests/unit/: test_data_adapters.py  test_models.py
backend/src/spatx_core/tests/unit/data/: test_data.py  test_data_point.py
backend/src/spatx_core/tests/unit/data_adapters/: __init__.py  test_base_data_adapter.py  (+2 more)
(+23 files in other folders)
